feat: add new attribute
