# src/main/java/ch/bbw/m226/openapiproject/DogController.java
@@ -11,6 +11,7 @@ import javax.annotation.PostConstruct;
 
 import ch.bbw.m226.openapi.generated.controller.DogsApi;
 import ch.bbw.m226.openapi.generated.dto.DogDTO;
+import ch.bbw.m226.openapi.generated.dto.FoodDTO;
 import ch.bbw.m226.openapi.generated.dto.OwnerDTO;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -29,9 +30,9 @@ public class DogController implements DogsApi {
 
     @PostConstruct
     public void someInitialDogs() {
-        addDog(new DogDTO().breed("Golden Retriever").name("Goldi").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")));
-        addDog(new DogDTO().name("Tobi").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")));
-        addDog(new DogDTO().name("Kira").breed("Bernersenn").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")));
+        addDog(new DogDTO().breed("Golden Retriever").name("Goldi").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")).food(new FoodDTO().type("Chicken").mainIngredients("Chicken, Spice").protein("Fat")));
+        addDog(new DogDTO().name("Tobi").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")).food(new FoodDTO().type("Chicken").mainIngredients("Chicken, Spice").protein("Fat")));
+        addDog(new DogDTO().name("Kira").breed("Bernersenn").owner(new OwnerDTO().age(BigDecimal.valueOf(13)).name("Kai se Owner")).food(new FoodDTO().type("Chicken").mainIngredients("Chicken, Spice").protein("Fat")));
     }
 
 
